<resources>
    <string name="app_name">Spotifly</string>
    <string name="user">Usuario</string>
    <string name="password">password</string>
    <string name="forgotpassword">¿Olvidaste tu clave?</string>
    <string name="signIn">Entrar</string>
    <string name="announcement">¿No tienes cuenta?</string>
    <string name="register">¡registrate!</string>
    <string name="registerButton">Registrar</string>
    <string name="cancelButton">Cancelar</string>
    <string name="newPassword">Nueva clave</string>
    <string name="email">Correo electrónico</string>
    <string name="forgorPasswordT">¿Olvidaste la contraseña?</string>
    <string name="registerT">Registro</string>
    <string name="repeatPassword">Repita la contraseña</string>
    <string name="passwordd">Contraseña</string>
    <string name="userName">Nombre de usuario</string>
    <string name="addFriends">Añadir amigos</string>
    <string name="friendEmail">Correo de tu amigo</string>
    <string name="sendButton">Enviar</string>
    <string name="addSongs">Añadir canción</string>
    <string name="songTitle">Titulo de la cancion</string>
    <string name="songArtist">Artista de la canción</string>
    <string name="fileName">Nombre del archivo</string>
    <string name="searchButton">Buscar archivo</string>
    <string name="friendName">Nombre del amigo </string>
    <string name="start">0:00</string>
    <string name="end">3:39</string>
    <string name="playButton">reproducir</string>
    <string name="friendSong">Cancion escuchada por</string>
    <string name="player">Reproductor</string>
    <string name="like">Me gusta</string>
    <string name="dislike">No me gusta</string>
    <string name="friend">Amigos</string>
    <string name="songs">Canciones</string>
    <string name="add">+</string>
    <string name="logout">Salir</string>
    <string name="submitButton">Enviar</string>
    <string name="users">Usuarios</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
</resources>
