<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".player.PlayerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blanco">

        <LinearLayout
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal"
            android:background="@color/morado416"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8sp"
                android:layout_marginTop="8sp"
                android:textColor="@color/blanco"
                android:textSize="30sp"
                tools:text="@string/friendSong" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/friendAndTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="100sp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/titulo">

            <TextView
                android:id="@+id/textViewFriendName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/negro"
                android:textSize="40sp"
                tools:text="@string/friendName" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/songTitle"
                android:textColor="@color/negro"
                android:background="@color/blanco"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/friendAndTitle"
            android:layout_marginTop="20sp">

            <CheckBox
                android:id="@+id/checkBoxLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/negro"
                android:textColor="@color/negro"
                tools:text="@string/like" />

            <CheckBox
                android:id="@+id/checkBoxDislike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/negro"
                android:textColor="@color/negro"
                tools:text="@string/dislike" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>