<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".player.PlayerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blanco">

        <LinearLayout
            android:id="@+id/friendAndTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100sp">

            <TextView
                android:id="@+id/textViewSongName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/negro"
                android:textSize="40sp"
                android:text="@string/songTitle" />

            <TextView
                android:id="@+id/textViewArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50sp"

                android:textColor="@color/negro"
                android:textSize="20sp"
                android:text="@string/songArtist" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/friendAndTitle"
            android:layout_marginTop="200sp"
            android:gravity="center">

            <TextView
                android:id="@+id/textViewStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="200sp"
                android:text="@string/start"
                android:textColor="@color/negro" />

            <TextView
                android:id="@+id/textViewEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textColor="@color/negro"
                tools:text="@string/end" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="10sp"
            app:layout_constraintTop_toBottomOf="@id/duration">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:outlineAmbientShadowColor="@color/morado416"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/progress"
            android:layout_marginTop="20sp">

            <ImageButton
                android:id="@+id/imageButtonBackwards"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="30sp"
                app:srcCompat="@drawable/backward"
                android:background="@color/blanco"/>

            <ToggleButton
                android:id="@+id/toggleButton"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:background="@color/morado416"
                android:textOff="ON"
                android:textOn="OFF"
                tools:text="@string/playButton" />

            <ImageButton
                android:id="@+id/imageButtonForward"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                app:srcCompat="@drawable/forward"
                android:layout_marginStart="10sp"
                android:background="@color/blanco"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>