<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".register.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blanco">

        <LinearLayout
            android:id="@+id/campos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100sp">>

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/email"
                android:textColor="@color/negro"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@drawable/inputs_background"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="10sp"
                android:textColor="@color/negro" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/campos"
            android:layout_marginTop="50sp">

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:background="@color/morado416"
                android:text="@string/cancelButton"
                android:textColor="@color/blanco"/>

            <Button
                android:id="@+id/submitButton"
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:background="@color/morado416"
                android:text="@string/submitButton"
                android:textColor="@color/blanco" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>